# transcriptsmaker

./: .replit  Pasted-2024-10-29-17-43-19-273-app-INFO-Upload-folder-created-at-tmp-uploads-2024-10-29-17-43-20-82-1730224019322.txt  Pasted-Can-you-please-review-all-of-the-code-related-to-Deepgram-and-make-sure-that-it-is-complete-and-corr-1730314694248.txt  Pasted-Code-Structure-and-Readability-Add-a-main-function-Wrap-the-main-logic-of-your-program-in-a-main--1730236713493.txt  Pasted-Current-Implementation-The-script-currently-Sets-up-Azure-Speech-configuration-Defines-a-functio-1730222346967.txt  Pasted-How-do-you-update-the-port-configuration-to-ensure-compatibility-with-Replit-s-environment-This-wil-1730240926229.txt  Pasted-I-ve-reviewed-the-Repl-you-shared-again-focusing-on-the-potential-issues-you-mentioned-Here-s-an-a-1730223819494.txt  Pasted-Legal-Transcription-System-Technical-Specification-Project-Overview-Development-of-a-high-accuracy-l-1730216142224.txt  Pasted-Project-Overview-The-repository-appears-to-be-a-Flask-based-web-application-for-transcribing-audio--1730327419453.txt  Pasted-The-code-you-ve-provided-looks-generally-correct-for-running-a-Flask-application-on-a-Windows-11-PC--1730237863936.txt  Pasted-These-models-appear-to-be-designed-for-a-transcription-system-Let-s-review-each-model-Transcripti-1730237940964.txt  Pasted-To-add-real-time-transcription-using-Deepgram-s-streaming-API-to-your-transcriptsmaker-application--1730337078205.txt  api.py  app.py  main.py  models.py  monitoring.py  pyproject.toml  replit.nix  routes.py  (+9 more)
templates/: 404.html  (+3 more)
(+9 files in other folders)
