[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "azure-cognitiveservices-speech>=1.41.1",
    "aiohttp>=3.10.10",
    "websockets>=13.1",
    "python-dotenv>=1.0.1",
    "deepgram-sdk==2.12.0",
    "noisereduce",
    "numpy>=1.20.0,<1.24.0",
    "scipy>=1.7.0,<1.10.0",
    "pydub",
    "soundfile",
    "librosa",
    "sqlalchemy",
    "werkzeug",
    "psutil>=6.1.0",
    "flask-restful>=0.3.10",
    "flask-swagger-ui>=4.11.1",
    "apispec>=6.7.0",
    "marshmallow>=3.23.0",
    "apscheduler",
]
